add_library(RTKLIB
  convgpx.c
  convkml.c
  convrnx.c
  datum.c
  download.c
  ephemeris.c
  geoid.c
  gis.c
  ionex.c
  lambda.c
  options.c
  pntpos.c
  postpos.c
  ppp_ar.c
  ppp.c
  preceph.c
  rcvraw.c
  rinex.c
  rtcm2.c
  rtcm3.c
  rtcm3e.c
  rtcm.c
  rtkcmn.c
  rtkpos.c
  rtksvr.c
  sbas.c
  solution.c
  stream.c
  streamsvr.c
  tides.c
  tle.c
  rcv/binex.c
  #rcv/cmr.c
  rcv/crescent.c
  rcv/javad.c
  rcv/novatel.c
  rcv/nvs.c
  rcv/rt17.c
  rcv/septentrio.c
  rcv/skytraq.c
  rcv/ss2.c
  rcv/swiftnav.c
  #rcv/tersus.c
  rcv/ublox.c
  )
target_include_directories(
  RTKLIB
  PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}
  )
